--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "frontend",
+  "name": "graphite-cms-admin-frontend",
   "version": "0.1.0",
-  "private": true,
+  "author": "Ilya Artamonov",
+  "private": false,
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
